--- a/app/src/main/res/layout/restoran_element_listview.xml
+++ b/app/src/main/res/layout/restoran_element_listview.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/std_first_name_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:gravity="center"
+        android:textStyle="bold"
         android:layout_weight="1"
-        android:hint="Имя" />
+        android:hint="Имя"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/std_second_name_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:textStyle="bold"
         android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="18dp"
         android:hint="Фамилия" />
 
-    <TextView
-        android:id="@+id/std_position_text_view"
+    <ImageButton
+        android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="Форма обучения" />
+        android:layout_height="45dp"
+        android:backgroundTint="@color/white"
+
+        app:srcCompat="@android:drawable/ic_menu_info_details" />
+
 </LinearLayout>
