--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StudentsListActivity">
+    tools:context=".FoodListActivity">
 
     <ListView
-        android:id="@+id/students_list_view"
+        android:id="@+id/food_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
