--- a/app/src/main/res/layout/input_new_catecoria_layout.xml
+++ b/app/src/main/res/layout/input_new_catecoria_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Введите название факультета"
+        android:hint="Введите название категории в меню"
         android:inputType="textPersonName" />
 
     <LinearLayout
