--- a/app/src/main/res/layout/restoran_element_listview.xml
+++ b/app/src/main/res/layout/restoran_element_listview.xml
@@ -2,34 +2,104 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/std_first_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:layout_weight="1"
-        android:hint="Имя"
-        android:textSize="18dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/std_second_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:textStyle="bold"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:hint="Фамилия" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/std_first_name_text_view3"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Блюдо:"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:backgroundTint="@color/white"
+        <TextView
+            android:id="@+id/std_first_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Имя"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/std_second_name_text_view3"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Вес:"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/std_second_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="вес"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-        app:srcCompat="@android:drawable/ic_menu_info_details" />
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:backgroundTint="@color/white"
+
+            app:srcCompat="@android:drawable/ic_menu_info_details" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/std_first_name_text_view142"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/std_first_name_text_view14"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Цена:"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/std_first_name_text_view1"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Цена"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/std_first_name_text_view15"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Доступность:"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/std_second_name_text_view1"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="1"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
